# sequence_utils

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .travis.yml  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  dev-requirements.txt  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini  update_test_scripts.sh
.github/workflows/: deploy.yaml  test.yaml
galaxy_utils/: __init__.py
galaxy_utils/sequence/: fasta.py  fastq.py  sequence.py  transform.py  vcf.py
galaxy_utils/sequence/scripts/: fastq_combiner.py  fastq_filter.py  fastq_groomer.py  fastq_manipulation.py  fastq_masker_by_quality.py  fastq_paired_end_deinterlacer.py  fastq_paired_end_interlacer.py  fastq_paired_end_joiner.py  fastq_paired_end_splitter.py  fastq_stats.py  fastq_to_fasta.py  fastq_to_tabular.py  fastq_trimmer.py  fastq_trimmer_by_quality.py
lib/galaxy_utils/sequence/: fastq.py
scripts/: bootstrap_history.py  commit_version.py  new_version.py  print_version_for_release.py  test_wheel.bash
tests/: fastq_groomer_inconsistent_id  planemo_test.bash  planemo_test_dependency_resolvers_conf_template.xml  planemo_test_env.sh  sanger_full_range_masked_N.fastqsanger.bz2  sanger_full_range_original_sanger.fastqsanger.bz2  sanger_full_range_quality_trimmed_out_1.fastqsanger.bz2  test_fastq.py  test_scripts.py
tests/test_data/: fastqreader_min-line3  fastqreader_min-multiline  fastqreader_min-multiline-edgecase  fastqreader_min_invalid-header
