[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.ruff.lint]
# Enable: pycodestyle errors (E), Pyflakes (F), flake8-logging-format (G),
# flake8-implicit-str-concat (ISC) and pyupgrade (UP)
select = ["E", "F", "G", "ISC", "UP"]
ignore = ["E501"]
