[flake8]
exclude =
    .eggs
    .git
    .tox
    .venv
    build
max-line-length = 150
max-complexity = 25
import-order-style = smarkets
application-import-names = galaxy_utils
ignore = E501,SFS3,W503

[metadata]
author = Dan Blankenberg, Galaxy Project and Community
author_email = galaxy-dev@lists.galaxyproject.org
classifiers =
        Development Status :: 5 - Production/Stable
        Intended Audience :: Developers
        Environment :: Console
        License :: OSI Approved :: Academic Free License (AFL)
        Natural Language :: English
        Operating System :: POSIX
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Programming Language :: Python :: 3.12
        Programming Language :: Python :: 3.13
        Topic :: Scientific/Engineering :: Bio-Informatics
        Topic :: Software Development
description = Galaxy utilities for manipulating genomic sequences
license = AFL-3.0
license_files =
    LICENSE
long_description = file: README.rst
long_description_content_type = text/x-rst
maintainer = Nicola Soranzo
maintainer_email = nicola.soranzo@earlham.ac.uk
name = galaxy_sequence_utils
project_urls =
    Bug Tracker = https://github.com/galaxyproject/sequence_utils/issues
    Source Code = https://github.com/galaxyproject/sequence_utils
url = https://github.com/galaxyproject/sequence_utils
version = attr: galaxy_utils.__version__

[options]
include_package_data = True
packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
    gx-fastq-to-tabular = galaxy_utils.sequence.scripts.fastq_to_tabular:main
    gx-fastq-groomer = galaxy_utils.sequence.scripts.fastq_groomer:main
    gx-fastq-combiner = galaxy_utils.sequence.scripts.fastq_combiner:main
    gx-fastq-filter = galaxy_utils.sequence.scripts.fastq_filter:main
    gx-fastq-manipulation = galaxy_utils.sequence.scripts.fastq_manipulation:main
    gx-fastq-masker-by-quality = galaxy_utils.sequence.scripts.fastq_masker_by_quality:main
    gx-fastq-paired-end-deinterlacer = galaxy_utils.sequence.scripts.fastq_paired_end_deinterlacer:main
    gx-fastq-paired-end-interlacer = galaxy_utils.sequence.scripts.fastq_paired_end_interlacer:main
    gx-fastq-paired-end-joiner = galaxy_utils.sequence.scripts.fastq_paired_end_joiner:main
    gx-fastq-paired-end-splitter = galaxy_utils.sequence.scripts.fastq_paired_end_splitter:main
    gx-fastq-stats = galaxy_utils.sequence.scripts.fastq_stats:main
    gx-fastq-to-fasta = galaxy_utils.sequence.scripts.fastq_to_fasta:main
    gx-fastq-trimmer = galaxy_utils.sequence.scripts.fastq_trimmer:main
    gx-fastq-trimmer-by-quality = galaxy_utils.sequence.scripts.fastq_trimmer_by_quality:main

[options.packages.find]
include = galaxy_utils*
